j--/tests/pass/Ternary.java
package pass;


public class Ternary {

	public int test(int a, int b) {
		return (a > b)? a : b;
	}

}
