j--/tests/fail/Ternary.java
package fail;

public class Ternary {

	public static void main(String args[]) {
		System.out.println("a" ? 1 : true);
	}
}
